recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:7: error: not found: value lenght
    tree(steps-1,lenght-1,angle,shrink)
                 ^